--- a/portfolio2.html
+++ b/portfolio2.html
@@ -295,7 +295,7 @@ function MM_swapImgRestore() { //v3.0
 			<section class="content">
 				
 	<div class="wrapper">
-	<div id="header"> <img src="img/portfolio.PNG"></div>
+	<div id="header"> <img src="img/portfolio.png"></div>
 	
 <div id="graphic">
   <a class="scroll" data-speed="1000" href="#graphic"></a> <a href="img/graphic1.jpg" data-title="DSW email blast (Spring 2019)" data-lightbox="graphic design"><img src="img/TN-graphic.jpg" width="200" height="500" alt=""/></a>
