--- a/resume2.html
+++ b/resume2.html
@@ -281,8 +281,8 @@
 			</div>
 			<section class="content">
 	<div class="wrapper"> 
-		<div id="header"> <img src="img/resume.PNG"></div>
-		<div id="resume"><a href="img/hirsch_resume.jpg" data-lightbox="photo"><img src="img/hirsch_resume.jpg" width="500" height="700" alt=""/></a>
+		<div id="header"> <img src="img/resume.png"></div>
+		<div id="resume"><a href="img/hirsch_resume.JPG" data-lightbox="photo"><img src="img/hirsch_resume.jpg" width="500" height="700" alt=""/></a>
 		<br>
 
 
