--- a/resume2.html
+++ b/resume2.html
@@ -282,11 +282,8 @@
 			<section class="content">
 	<div class="wrapper"> 
 		<div id="header"> <img src="img/resume.png"></div>
-		<div id="resume"><a href="img/hirsch_resume.JPG" data-lightbox="photo"><img src="img/hirsch_resume.jpg" width="500" height="700" alt=""/></a>
-		<br>
-
-
-				</div>
+		<div id="resume"><a href="img/hirsch_resume.JPG" data-lightbox="photo"><img src="img/hirsch_resume.JPG" width="500" height="700" alt=""/></a>
+		</div>
 
 			</section>
 		</main>
