--- a/contact.html
+++ b/contact.html
@@ -276,7 +276,7 @@
 			<section class="content"> 
 				
 	<div class="wrapper">
-			<div id="header"> <img src="img/contact.PNG"></div>
+			<div id="header"> <img src="img/contact.png"></div>
 		<br>
 
 		<!-- Do not change the code! -->
