--- a/resume2.html
+++ b/resume2.html
@@ -9,16 +9,21 @@
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Lora:700" rel="stylesheet">
-		<script src="js/jquery-1.11.0.min.js"></script>
+			<script src="js/jquery-1.11.0.min.js"></script>
 		<script src="js/lightbox.min.js"></script>
 		<link href="css/lightbox.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/style-salal.css" />
 		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
-		<link href="js/lightbox.css" rel="stylesheet">
-		<script src="js/lightbox.js"></script>
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>		
+		<link href="path/to/lightbox.css" rel="stylesheet" />
+		<script src="path/to/lightbox.js"></script>
+		<script>
+document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+		</script>
 		<style type="text/css">
 	.wrapper{
 		height: 850px;
@@ -292,5 +297,24 @@
 		<script src="js/demo.js"></script>
 		<script src="js/demo-salal.js"></script>
 
+			<!-- smooth scroll -->
+	<script>
+window.onscroll = function() {myFunction()};
+
+var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
+	<script src='smooth-scroll.js'></script>
+		
+		<!-- end smooth scroll js -->
+			
 	</body>
 </html>
